--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
-name: "blog-template"
-title: "___'s Blog"
+name: "Joséphine Dumortier"
+title: "___'the different venom present in the animal and plant worlds anda few treatment."
 output_dir: "docs"
 navbar:
   right:
@@ -10,8 +10,8 @@ navbar:
     - text: "About Me"
       href: "posts/about/index.html"
     - icon: fab fa-github
-      href: https://github.com/BioDataScience-Course/blog-template
-base_url: http://biodatascience-course.sciviews.org/blog-template/
+      href: https://github.com/jojo200241/jos-phine200241_blog.git
+base_url: jojo200241.github.io/jos-phine200241_blog
 collections:
     posts:
       share: [twitter, linkedin, facebook]
