--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
 name: "Joséphine Dumortier"
-title: "Joséphine Dumortier's blog"
+title: "Joséphine Dumortier's blog""
 output_dir: "docs"
 navbar:
   right:
