--- a/_site.yml
+++ b/_site.yml
@@ -7,16 +7,10 @@ navbar:
       href: index.html
     - text: "About Me"
       href: "posts/about/index.html"
-    - text: "Sections"
-      menu:
-        #- text: "Data Science"
-        #  href: SDDexos.html
-        - text: "Articles"
-          href: articles.html
-        - text: "M.E.A.L."
-          href: "posts/meal/index.html"
+    - text: "M.E.A.L."
+      href: "posts/meal/index.html"
     - icon: fab fa-github
-      href: https://github.com/jojo200241/jos-phine200241_blog.git
+      href: https://github.com/jojo200241/jos-phine200241_blog
 base_url: https://jojo200241.github.io/jos-phine200241_blog/
 collections:
     posts:
